2007-05-23  Everaldo Canuto  <ecanuto@novell.com>

	* TestHelper.cs: Event log added.

2007-05-23  Everaldo Canuto  <ecanuto@novell.com>

	* ContextMenuTest.cs: ContextMenu tests added.

2007-05-23  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* ToolBarButtonTest.cs: Added test for Name.

2007-05-22  Gert Driesen  <drieseng@users.sourceforge.net>

	* FormTest.cs: Renamed FormCantGetTooSmall test and use comparison
	with SystemInformation.MinimumWindowSize. Enable test.

2007-05-22  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* FormTest.cs: Added ShowDialogCloseTest.

2007-05-21  Jonathan Pobst  <monkey@jpobst.com>

	* FormTest.cs: Mark FormCantGetTooSmall as NotWorking.  It only applies to Windows.

2007-05-21  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayoutTest.cs: Tests for bugs 81694, 81695.
	* FormTest.cs: Test setting the form size smaller than the WM will
	allow it.

2007-05-21  Chris Toshok  <toshok@ximian.com>

	* DataBindingTests.cs (TestColumnAdd): enable this test.  the
	system.data changes required are in, and it works now.

2007-05-19  Andreia Gaita  <avidigal@novell.com>

	* NumericUpDownTest: Added.

2007-05-18  Jonathan Pobst  <monkey@jpobst.com>

	* DataObjectTest.cs: Added.

2007-05-18  Gert Driesen  <drieseng@users.sourceforge.net>

	* TreeViewTest.cs: Added test for DoubleBuffered.

2007-05-18  Jonathan Pobst  <monkey@jpobst.com>

	* KeysConverterTest.cs: Added.
	* LinkConverterTest.cs: Added.
	* LinkLabelTest.cs: Added tests for LinkLabel.Link.

2007-05-17  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBoxTest.cs: New test for some exceptions in
	ListBox.ObjectCollection methods.

2007-05-17  Chris Toshok  <toshok@ximian.com>

	* ControlBindingsCollectionTest.cs: new test file, move a test
	from BindingTest here.

	* BindingTest.cs (DuplicateBindingAdd): move the test to
	ControlBindingsCollectionTest.

	* BindingManagerBaseTest.cs (BindingsTest): enable this test.
	passes now.
