@@ -53,26 +53,6 @@ namespace MonoTests.System.Windows.Forms
 				return ((platform == 4) || (platform == 128));
 			}
 		}
-
-		#region Event log
-
-		private ArrayList event_log;
-
-		public ArrayList EventLog {
-			get { return event_log; }
-		}
-
-		private void AddEvent (string text)
-		{
-			event_log.Add (text);
-		}
-
-		public void OnClick (object sender, EventArgs e)
-		{
-			AddEvent ("OnClick");
-		}
-
-		#endregion // Event log
 	}
 	
 	[Flags]
